--- a/SimpleDemo/build.gradle
+++ b/SimpleDemo/build.gradle
@@ -21,6 +21,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.0.0'
-    //    compile 'com.github.itcastsh:LoopViewPager:1.1.0'
+    //    compile 'com.github.itcastsh:loopviewpager:1.1.1'
     compile project(':library')
 }
