--- a/SimpleDemo/build.gradle
+++ b/SimpleDemo/build.gradle
@@ -21,5 +21,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
-    compile project(':library')
+    compile 'com.github.itcastsh:loopviewpager:1.2.1'
 }
